# bazel-syn-issue

./: .bazelrc  Cargo.toml  README.md  WORKSPACE  bazel-bazel-syn-issue  bazel-bin  bazel-out  bazel-testlogs
cargo/: BUILD  Cargo.toml
src/: BUILD  lib.rs
tools/: rust_toolchains.bzl
